--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,10 @@ api-version: 1.18
 authors: [ Mat ]
 description: SurvivalGamesPlugin For ActiCraft
 website: https://discord.gg/acticraft
+
+softdepend: [Parties]
+
+
 commands:
   vanish:
   start:
