HungerGames Game Structure update

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,4 +8,4 @@ password: ""
 
 
 
-# | Credits: JoshuaLovesCode aka Hypera | JernejTDO,Alandoida - Hypple |
+#  Credits: JoshuaLovesCode aka Hypera  JernejTDO,Alandoida - Hypple
