--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,4 +19,202 @@ arena-name: Kingdoms
 
 
 
+#100% my code
+
+lootItems:
+  0:
+    material: GOLD_SWORD
+    chance: 0.1
+    minAmount: 1
+    maxAmount: 1
+  1:
+    material: APPLE
+    chance: 0.6
+    minAmount: 2
+    maxAmount: 7
+  2:
+    material: COOKED_BEEF
+    chance: 0.3
+    minAmount: 3
+    maxAmount: 6
+  3:
+    material: BOW
+    chance: 0.2
+    minAmount: 1
+    maxAmount: 1
+  4:
+    material: IRON_SWORD
+    chance: 0.01
+    minAmount: 1
+    maxAmount: 1
+  5:
+    material: STONE
+    chance: 0.4
+    minAmount: 24
+    maxAmount: 24
+  7:
+    material: LEATHER_BOOTS
+    chance: 0.5
+    minAmount: 1
+    maxAmount: 1
+  9:
+    material: SPYGLASS
+    chance: 0.4
+    minAmount: 1
+    maxAmount: 1
+  11:
+    material: CARROT
+    chance: 0.1
+    minAmount: 1
+    maxAmount: 10
+  12:
+    material: SOUP
+    chance: 0.6
+    minAmount: 1
+    maxAmount: 1
+  13:
+    material: WHEAT
+    chance: 0.7
+    minAmount: 1
+    maxAmount: 32
+  14:
+    material: GOLDEN_CHESTPLATE
+    chance: 0.2
+    minAmount: 1
+    maxAmount: 1
+  15:
+    material: IRON_PICKAXE
+    chance: 0.4
+    minAmount: 1
+    maxAmount: 1
+  16:
+    material: SNOWBALL
+    chance: 0.2
+    minAmount: 8
+    maxAmount: 8
+  17:
+    material: EGG
+    chance: 0.2
+    minAmount: 12
+    maxAmount: 12
+  18:
+    material: FISHING_ROD
+    chance: 0.1
+    minAmount: 1
+    maxAmount: 1
+  19:
+    material: EXPERIENCE_BOTTLE
+    chance: 0.1
+    minAmount: 1
+    maxAmount: 16
+  20:
+    material: LEATHER_LEGGINGS
+    chance: 0.7
+    minAmount: 1
+    maxAmount: 1
+  21:
+    material: LEATHER_HELMET
+    chance: 0.7
+    minAmount: 1
+    maxAmount: 1
+  22:
+    material: CHAINMAIL_BOOTS
+    chance: 0.3
+    minAmount: 1
+    maxAmount: 1
+  23:
+    material: CHAINMAIL_CHESTPLATE
+    chance: 0.3
+    minAmount: 1
+    maxAmount: 1
+  24:
+    material: CHAINMAIL_HELMET
+    chance: 0.3
+    minAmount: 1
+    maxAmount: 1
+  25:
+    material: CHAINMAIL_LEGGINGS
+    chance: 0.3
+    minAmount: 1
+    maxAmount: 1
+  26:
+    material: STONE_AXE
+    chance: 0.8
+    minAmount: 1
+    maxAmount: 1
+  27:
+    material: IRON_AXE
+    chance: 0.2
+    minAmount: 1
+    maxAmount: 1
+  28:
+    material: DIAMOND_AXE
+    chance: 0.1
+    minAmount: 1
+    maxAmount: 1
+  29:
+    material: DIAMOND
+    chance: 0.3
+    minAmount: 1
+    maxAmount: 1
+  30:
+    material: IRON_INGOT
+    chance: 0.5
+    minAmount: 1
+    maxAmount: 3
+  31:
+    material: GOLD_INGOT
+    chance: 0.4
+    minAmount: 1
+    maxAmount: 2
+  32:
+    material: WOODEN_SWORD
+    chance: 0.8
+    minAmount: 1
+    maxAmount: 1
+  33:
+    material: WOODEN_AXE
+    chance: 0.8
+    minAmount: 1
+    maxAmount: 1
+  34:
+    material: FLINT_AND_STEAL
+    chance: 0.1
+    minAmount: 1
+    maxAmount: 1
+  35:
+    material: IRON_CHESTPLATE
+    chance: 0.2
+    minAmount: 1
+    maxAmount: 1
+  36:
+    material: IRON_BOOTS
+    chance: 0.2
+    minAmount: 1
+    maxAmount: 1
+  37:
+    material: IRON_LEGGINGS
+    chance: 0.2
+    minAmount: 1
+    maxAmount: 1
+  38:
+    material: IRON_HELMET
+    chance: 0.2
+    minAmount: 1
+    maxAmount: 1
+  39:
+    material: GOLDEN_APPLE
+    chance: 0.1
+    minAmount: 1
+    maxAmount: 1
+  40:
+    material: GOLDEN_CARROT
+    chance: 0.1
+    minAmount: 1
+    maxAmount: 6
+  41:
+    material: STICK
+    chance: 0.7
+    minAmount: 1
+    maxAmount: 3
 #  Credits: JoshuaLovesCode aka Hypera  JernejTDO,Alandoida - Hypple
